[gd_scene load_steps=20 format=2]

[ext_resource path="res://Enemies/SpikeGuardian.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/SpikeGuardian/idle.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/SpikeGuardian/slash.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemies/SpikeGuardian/defendh.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemies/SpikeGuardian/defendv.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemies/SpikeGuardian/hurt.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemies/SpikeGuardian/spike_attack.png" type="Texture" id=7]

[sub_resource type="CanvasItemMaterial" id=11]
blend_mode = 1

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 39, 29 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 39, 0, 39, 29 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 78, 0, 39, 29 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 117, 0, 39, 29 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 156, 0, 39, 29 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 39, 29 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 39, 29 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "defend_v",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "defend_h",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "slashing",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 6, 14 )

[sub_resource type="CircleShape2D" id=8]
radius = 12.0

[sub_resource type="CircleShape2D" id=12]
radius = 37.5

[node name="SpikeGuardian" type="KinematicBody2D" groups=[
"attackable",
]]
collision_layer = 8
collision_mask = 17
script = ExtResource( 1 )

[node name="SpikeAttack" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 11 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Animations" type="AnimatedSprite" parent="."]
position = Vector2( -2, -3 )
frames = SubResource( 6 )
animation = "defend_v"

[node name="RayCast" type="RayCast2D" parent="."]
enabled = true
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 7 )

[node name="Hurtbox" type="Area2D" parent="." groups=[
"sword_hurtbox",
]]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -8, 2 )
shape = SubResource( 8 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 12 )

[connection signal="animation_finished" from="Animations" to="." method="_on_animation_finished"]
[connection signal="frame_changed" from="Animations" to="." method="_on_frame_changed"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
